# SDA

Greedy-lab11/: Greedy-lab11.cbp  Greedy-lab11.depend  Greedy-lab11.layout  descompunere.c  main.c  planificare.c
aranjamente/: aranjamente.cbp  aranjamente.layout  main.c
backtrackingIterativCombinari/: backtrackingIterativCombinari.cbp  backtrackingIterativCombinari.depend  backtrackingIterativCombinari.layout  main.c
lab1/: CMakeLists.txt  main.cpp  student.cpp  student.h
lab1/P2/: main.cpp
lab1/P3/: CMakeLists.txt  main.cpp
lab10/: main.c
lab2/: CMakeLists.txt  list.cpp  list.h  main.cpp  node.h  reverse.cpp  reverse.h  vectorList.cpp  vectorList.h
lab3/: CMakeLists.txt  doubleLinkedLists.cpp  doubleLinkedLists.h  main.cpp  queue.cpp  queue.h  stack.cpp  stack.h
lab4/: BinaryTree.c  BinaryTree.h  CMakeLists.txt  main.c
lab5/: BinaryTree.c  BinaryTree.h  CMakeLists.txt  main.c
lab6/: BoilerPlateChaining.c  CMakeLists.txt  HashTable.cpp  HashTable.h  main.cpp
lab6/Problema Rezolvata Chaining si Problema Propusa/: hashTablesChaining.c
lab7/: graf2.txt  main.c
lab7/queue/: queue.c
lab8/: input.txt  lab8.cbp  lab8.depend  lab8.layout  main.c
lab9/: CMakeLists.txt  doneAtLab.c  double_linked_list.c  double_linked_list.h  graph.h  int_queue.c  int_queue.h  int_stack.c  int_stack.h  main.c  queue.c  queue.h  single_linked_list.c  single_linked_list.h  stack.c  stack.h
nQueens/: main.c  nQueens.cbp  nQueens.depend  nQueens.layout
prim/: CMakeLists.txt  main.c
testSDA/: TestSDA.c  TestSDA.h
topologicalSort/: CMakeLists.txt  main.c
(+10 files in other folders)
